# Erp-4.0.0

./: .gitignore  ESTRUTURA_BASE.md  GUIA_OEE.md  INSUMOS_TUTORIAL.md  Proposta.pptx  README.rst  apontamentos.json  macs.json  main.py  markdown.txt  populate_insumos.py  pyproject.toml  pyvenv.cfg  requirements.txt
.tmp.driveupload/: 62454  62458  62462  62468  62470  62474  62478  62482  62486  62490  62494  62498  62502  62506  62510  62512  62516  62518  62522  62526  62530  62534  62536  62540  62544  62548  62552  62556  62560  62564  62568  62572  62574  62578  62582  62586  62590  62594  62596  62600  (+28 more)
_itens/: admin.py  apps.py  forms.py  models.py  urls.py
_itens/migrations/: 0001_initial.py  0002_initial.py  0002_rename_nome_componentes_name.py  (+4 more)
_operadores/: admin.py  apps.py  models.py
_resources/: admin.py  apps.py  models.py
_transactions/: apps.py  models.py
apont/: admin.py  apps.py  models.py  urls.py
cad_item/: admin.py  apps.py  forms.py  models.py
carregamento/: admin.py  forms.py  models.py  urls.py  views.py
clientes/: admin.py  forms.py  models.py  urls.py  views.py
dashboard/: urls.py  views.py
desempenho/: admin.py  models.py  services.py  urls.py  views.py
dotenv-files/: dot_env
ignore/: Proposta II.pptx
pedidos/: admin.py  forms.py  models.py  urls.py  views.py
ppcp/: admin.py  apps.py  forms.py  models.py  urls.py
project/: settings.py  urls.py
rule/: admin.py  models.py  urls.py  views.py
site_setup/: admin.py  context_processor.py  models.py  session_middleware.py  turno_middleware.py  urls.py
utility/: views.py
utils/: images.py  model_validator.py
(+270 files in other folders)
